# ocr-playground

./: crop.py  pyproject.toml
