[project]
name = "ocr"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10,<3.11"
dependencies = [
    "ipython>=8.18.1",
    "matplotlib>=3.9.4",
    "mcp[cli]>=1.8.1",
    "pillow>=11.2.1",
    "ruff>=0.11.9",
    "timm>=1.0.15",
    "torch>=2.7.0",
    "transformers>=4.51.3",
]
